infrastructure/kubernetes/03-platform-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: techshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: techshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 29092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: techshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0
          args: ["start-dev"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: techshop
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: techshop
spec:
  selector:
    app: kafka
  ports:
    - port: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: techshop
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
